# EECS221---Multicore

Static tree Barrier/: Makefile  StaticTreeBarrier.h  Test1.cc  Test2.cc
scalable reader-writer problem/: CMakeLists.txt  Makefile  classlist.h  common.h  mymemory.cc  mymemory.h  qnode.cc  qnode.h  readtree.cc  rwlock.cc  rwlock.h  test.cc
